<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:shapeAppearanceOverlay="@style/TopRoundedCorners">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/lib_material_reason_request"
            android:textColor="#1A1D1F"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/which_of_the_following_best_describes_the_main_issue"
            android:textColor="#676E76"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_checkbox_1"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_checkbox_2"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_checkbox_3"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_checkbox_4"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_checkbox_5"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_reason6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/lib_material_other"
            android:textColor="#676E76" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_edit"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|top"
            android:hint="@string/lib_material_description_optional"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="3"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:textSize="14sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/button_add_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/ic_add_image" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/upload_screenshot_files"
                    android:textColor="#1A1D1F"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:includeFontPadding="false"
                    android:text="@string/up_to_5_files_images"
                    android:textColor="#9EA5AD"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_media"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_feedbackSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button_action"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingVertical="15dp"
            android:text="@string/lib_material_send"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_maybeLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/lib_material_cancel"
            android:textAllCaps="false"
            android:textColor="#1D1D1D"
            android:textSize="14sp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</com.google.android.material.card.MaterialCardView>
