<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:shapeAppearanceOverlay="@style/TopRoundedCorners">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_face_feedback" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lib_material_appreciate_feedback"
            android:textColor="#1A1D1F"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/lib_material_feedback_noted"
            android:textColor="#676E76"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bt_ratingSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/bg_button_action"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/lib_material_close"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
