<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:shapeAppearanceOverlay="@style/TopRoundedCorners">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_face_start" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lib_material_rating"
            android:textColor="#1A1D1F"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/lib_material_tips"
            android:textColor="#676E76"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewRateDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="14dp">

            <LinearLayout
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_start_disable" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_start_disable" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_start_disable" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_start_disable" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_star_round" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icRate111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_rate_11"
                app:layout_constraintEnd_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/the_best_we_can_get"
                android:textAlignment="center"
                android:textColor="#F9B82D"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/icRate111"
                app:layout_constraintEnd_toStartOf="@+id/icRate111" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bt_ratingSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="24dp"
            android:enabled="false"
            android:background="@drawable/bg_button_disable"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/lib_material_rate"
            android:textAllCaps="false"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"/>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
